site: fix: Set z-index to 2000
When it was 20 earlier, it would cause the navbar on mobile to disappear

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -329,7 +329,7 @@ input:checked + .slider:before { transform: translateX(20px); background-color: 
     bottom: 0;
     width: 100%;
     border-top: 1px solid rgba(0,0,0,0.05);
-    z-index: 20;
+    z-index: 2000;
     transition: background-color 0.3s ease;
 }
 .nav-item {
